# sarif-tui

./: .gitignore  Cargo.toml  README.md
src/: app.rs  cli.rs  event.rs  filter.rs  lib.rs  main.rs
src/actions/: clipboard.rs  export.rs  mod.rs  open_editor.rs
src/sarif/: load.rs  mod.rs  model.rs  normalize.rs
src/triage/: diff.rs  mod.rs  state.rs
src/ui/: details.rs  filters.rs  findings.rs  help.rs  mod.rs  triage.rs
tests/fixtures/: codeql.sarif  empty.sarif  semgrep.sarif  trivy.sarif
